added new routes and hot fixes
